fix: fix layout problem

--- a/src/components/ShoppingCart/styles.scss
+++ b/src/components/ShoppingCart/styles.scss
@@ -67,6 +67,8 @@
             .top-wraper {
                 margin: 0;
                 padding: 0;
+                display: flex;
+                flex-direction: column;
                 .shoppingCart-content {
     
                     .shoppingCart-menu {
